v1.1.0/modules/schema/pages/class/ThermalGeneratingUnit.adoc
= `ThermalGeneratingUnit`
:toclevels: 4


+++A generating unit whose prime mover could be a steam turbine, combustion turbine, or diesel engine.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ThermalGeneratingUnit`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/Equipment.adoc[`Equipment`]
**** xref::class/GeneratingUnit.adoc[`GeneratingUnit`]
***** *`ThermalGeneratingUnit`*
 ****** xref::class/MktThermalGeneratingUnit.adoc[`MktThermalGeneratingUnit`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CAESPlant,`CAESPlant`>>
//| [[slots_table.CAESPlant]]<<CAESPlant,`CAESPlant`>>
| 0..1 +
xref::class/CAESPlant.adoc[`CAESPlant`]
| +++A thermal generating unit may be a member of a compressed air energy storage plant.+++
| _n/a_

| <<CogenerationPlant,`CogenerationPlant`>>
//| [[slots_table.CogenerationPlant]]<<CogenerationPlant,`CogenerationPlant`>>
| 0..1 +
xref::class/CogenerationPlant.adoc[`CogenerationPlant`]
| +++A thermal generating unit may be a member of a cogeneration plant.+++
| _n/a_

| <<CombinedCyclePlant,`CombinedCyclePlant`>>
//| [[slots_table.CombinedCyclePlant]]<<CombinedCyclePlant,`CombinedCyclePlant`>>
| 0..1 +
xref::class/CombinedCyclePlant.adoc[`CombinedCyclePlant`]
| +++A thermal generating unit may be a member of a combined cycle plant.+++
| _n/a_

| <<EmissionCurves,`EmissionCurves`>>
//| [[slots_table.EmissionCurves]]<<EmissionCurves,`EmissionCurves`>>
| 0..* +
xref::class/EmissionCurve.adoc[`EmissionCurve`]
| +++A thermal generating unit may have  one or more emission curves.+++
| _n/a_

| <<EmmissionAccounts,`EmmissionAccounts`>>
//| [[slots_table.EmmissionAccounts]]<<EmmissionAccounts,`EmmissionAccounts`>>
| 0..* +
xref::class/EmissionAccount.adoc[`EmissionAccount`]
| +++A thermal generating unit may have one or more emission allowance accounts.+++
| _n/a_

| <<FossilFuels,`FossilFuels`>>
//| [[slots_table.FossilFuels]]<<FossilFuels,`FossilFuels`>>
| 0..* +
xref::class/FossilFuel.adoc[`FossilFuel`]
| +++A thermal generating unit may have one or more fossil fuels.+++
| _n/a_

| <<FuelAllocationSchedules,`FuelAllocationSchedules`>>
//| [[slots_table.FuelAllocationSchedules]]<<FuelAllocationSchedules,`FuelAllocationSchedules`>>
| 0..* +
xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`]
| +++A thermal generating unit may have one or more fuel allocation schedules.+++
| _n/a_

| <<HeatInputCurve,`HeatInputCurve`>>
//| [[slots_table.HeatInputCurve]]<<HeatInputCurve,`HeatInputCurve`>>
| 0..1 +
xref::class/HeatInputCurve.adoc[`HeatInputCurve`]
| +++A thermal generating unit may have a heat input curve.+++
| _n/a_

| <<HeatRateCurve,`HeatRateCurve`>>
//| [[slots_table.HeatRateCurve]]<<HeatRateCurve,`HeatRateCurve`>>
| 0..1 +
xref::class/HeatRateCurve.adoc[`HeatRateCurve`]
| +++A thermal generating unit may have a heat rate curve.+++
| _n/a_

| <<IncrementalHeatRateCurve,`IncrementalHeatRateCurve`>>
//| [[slots_table.IncrementalHeatRateCurve]]<<IncrementalHeatRateCurve,`IncrementalHeatRateCurve`>>
| 0..1 +
xref::class/IncrementalHeatRateCurve.adoc[`IncrementalHeatRateCurve`]
| +++A thermal generating unit may have an incremental heat rate curve.+++
| _n/a_

| <<ShutdownCurve,`ShutdownCurve`>>
//| [[slots_table.ShutdownCurve]]<<ShutdownCurve,`ShutdownCurve`>>
| 0..1 +
xref::class/ShutdownCurve.adoc[`ShutdownCurve`]
| +++A thermal generating unit may have a shutdown curve.+++
| _n/a_

| <<StartupModel,`StartupModel`>>
//| [[slots_table.StartupModel]]<<StartupModel,`StartupModel`>>
| 0..1 +
xref::class/StartupModel.adoc[`StartupModel`]
| +++A thermal generating unit may have a startup model.+++
| _n/a_

| <<oMCost,`oMCost`>>
//| [[slots_table.oMCost]]<<oMCost,`oMCost`>>
| 0..1 +
xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]
| +++Operating and maintenance cost for the thermal unit.+++
| _n/a_

| <<ControlAreaGeneratingUnit,`ControlAreaGeneratingUnit`>>
//| [[slots_table.ControlAreaGeneratingUnit]]<<ControlAreaGeneratingUnit,`ControlAreaGeneratingUnit`>>
| 0..* +
xref::class/ControlAreaGeneratingUnit.adoc[`ControlAreaGeneratingUnit`]
| +++ControlArea specifications for this generating unit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<GenUnitOpCostCurves,`GenUnitOpCostCurves`>>
//| [[slots_table.GenUnitOpCostCurves]]<<GenUnitOpCostCurves,`GenUnitOpCostCurves`>>
| 0..* +
xref::class/GenUnitOpCostCurve.adoc[`GenUnitOpCostCurve`]
| +++A generating unit may have one or more cost curves, depending upon fuel mixture and fuel cost.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<GenUnitOpSchedule,`GenUnitOpSchedule`>>
//| [[slots_table.GenUnitOpSchedule]]<<GenUnitOpSchedule,`GenUnitOpSchedule`>>
| 0..1 +
xref::class/GenUnitOpSchedule.adoc[`GenUnitOpSchedule`]
| +++A generating unit may have an operating schedule, indicating the planned operation of the unit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<GrossToNetActivePowerCurves,`GrossToNetActivePowerCurves`>>
//| [[slots_table.GrossToNetActivePowerCurves]]<<GrossToNetActivePowerCurves,`GrossToNetActivePowerCurves`>>
| 0..* +
xref::class/GrossToNetActivePowerCurve.adoc[`GrossToNetActivePowerCurve`]
| +++A generating unit may have a gross active power to net active power curve, describing the losses and auxiliary power...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<RotatingMachine,`RotatingMachine`>>
//| [[slots_table.RotatingMachine]]<<RotatingMachine,`RotatingMachine`>>
| 0..* +
xref::class/RotatingMachine.adoc[`RotatingMachine`]
| +++A synchronous machine may operate as a generator and as such becomes a member of a generating unit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<allocSpinResP,`allocSpinResP`>>
//| [[slots_table.allocSpinResP]]<<allocSpinResP,`allocSpinResP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The planned unused capacity (spinning reserve) which can be used to support emergency load.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<autoCntrlMarginP,`autoCntrlMarginP`>>
//| [[slots_table.autoCntrlMarginP]]<<autoCntrlMarginP,`autoCntrlMarginP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The planned unused capacity which can be used to support automatic control overruns.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<baseP,`baseP`>>
//| [[slots_table.baseP]]<<baseP,`baseP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++For dispatchable units, this value represents the economic active power basepoint, for units that are not dispatchable, this...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<controlDeadband,`controlDeadband`>>
//| [[slots_table.controlDeadband]]<<controlDeadband,`controlDeadband`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Unit control error deadband. When a unit's desired active power change is less than this deadband, then no control pulses...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<controlPulseHigh,`controlPulseHigh`>>
//| [[slots_table.controlPulseHigh]]<<controlPulseHigh,`controlPulseHigh`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Pulse high limit which is the largest control pulse that the unit can respond to.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<controlPulseLow,`controlPulseLow`>>
//| [[slots_table.controlPulseLow]]<<controlPulseLow,`controlPulseLow`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Pulse low limit which is the smallest control pulse that the unit can respond to.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<controlResponseRate,`controlResponseRate`>>
//| [[slots_table.controlResponseRate]]<<controlResponseRate,`controlResponseRate`>>
| 0..1 +
xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++Unit response rate which specifies the active power change for a control pulse of one second in the most responsive loading...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<efficiency,`efficiency`>>
//| [[slots_table.efficiency]]<<efficiency,`efficiency`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++The efficiency of the unit in converting mechanical energy, from the prime mover, into electrical energy.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<genControlMode,`genControlMode`>>
//| [[slots_table.genControlMode]]<<genControlMode,`genControlMode`>>
| 0..1 +
xref::enumeration/GeneratorControlMode.adoc[`GeneratorControlMode`]
| +++The unit control mode.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<genControlSource,`genControlSource`>>
//| [[slots_table.genControlSource]]<<genControlSource,`genControlSource`>>
| 0..1 +
xref::enumeration/GeneratorControlSource.adoc[`GeneratorControlSource`]
| +++The source of controls for a generating unit.  Defines the control status of the generating unit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<governorMPL,`governorMPL`>>
//| [[slots_table.governorMPL]]<<governorMPL,`governorMPL`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor motor position limit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<governorSCD,`governorSCD`>>
//| [[slots_table.governorSCD]]<<governorSCD,`governorSCD`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Governor Speed Changer Droop.   This is the change in generator power output divided by the change in frequency normalized...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<highControlLimit,`highControlLimit`>>
//| [[slots_table.highControlLimit]]<<highControlLimit,`highControlLimit`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++High limit for secondary (AGC) control.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<initialP,`initialP`>>
//| [[slots_table.initialP]]<<initialP,`initialP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Default initial active power  which is used to store a powerflow result for the initial active power for this unit in this...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<longPF,`longPF`>>
//| [[slots_table.longPF]]<<longPF,`longPF`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Generating unit long term economic participation factor.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<lowControlLimit,`lowControlLimit`>>
//| [[slots_table.lowControlLimit]]<<lowControlLimit,`lowControlLimit`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Low limit for secondary (AGC) control.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<lowerRampRate,`lowerRampRate`>>
//| [[slots_table.lowerRampRate]]<<lowerRampRate,`lowerRampRate`>>
| 0..1 +
xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++The normal maximum rate the generating unit active power output can be lowered by control actions.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<maxEconomicP,`maxEconomicP`>>
//| [[slots_table.maxEconomicP]]<<maxEconomicP,`maxEconomicP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Maximum high economic active power limit, that should not exceed the maximum operating active power limit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<maxOperatingP,`maxOperatingP`>>
//| [[slots_table.maxOperatingP]]<<maxOperatingP,`maxOperatingP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++This is the maximum operating active power limit the dispatcher can enter for this unit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<maximumAllowableSpinningReserve,`maximumAllowableSpinningReserve`>>
//| [[slots_table.maximumAllowableSpinningReserve]]<<maximumAllowableSpinningReserve,`maximumAllowableSpinningReserve`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Maximum allowable spinning reserve. Spinning reserve will never be considered greater than this value regardless of the...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<minEconomicP,`minEconomicP`>>
//| [[slots_table.minEconomicP]]<<minEconomicP,`minEconomicP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Low economic active power limit that shall be greater than or equal to the minimum operating active power limit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<minOperatingP,`minOperatingP`>>
//| [[slots_table.minOperatingP]]<<minOperatingP,`minOperatingP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++This is the minimum operating active power limit the dispatcher can enter for this unit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<minimumOffTime,`minimumOffTime`>>
//| [[slots_table.minimumOffTime]]<<minimumOffTime,`minimumOffTime`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Minimum time interval between unit shutdown and startup.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<modelDetail,`modelDetail`>>
//| [[slots_table.modelDetail]]<<modelDetail,`modelDetail`>>
| 0..1 +
xref::class/Classification.adoc[`Classification`]
| +++Detail level of the generator model data.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<nominalP,`nominalP`>>
//| [[slots_table.nominalP]]<<nominalP,`nominalP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The nominal power of the generating unit.  Used to give precise meaning to percentage based attributes such as the governor...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<normalPF,`normalPF`>>
//| [[slots_table.normalPF]]<<normalPF,`normalPF`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Generating unit economic participation factor.  The sum of the participation factors across generating units does not have...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<penaltyFactor,`penaltyFactor`>>
//| [[slots_table.penaltyFactor]]<<penaltyFactor,`penaltyFactor`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Defined as: 1 / ( 1 - Incremental Transmission Loss); with the Incremental Transmission Loss expressed as a plus or minus...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<raiseRampRate,`raiseRampRate`>>
//| [[slots_table.raiseRampRate]]<<raiseRampRate,`raiseRampRate`>>
| 0..1 +
xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++The normal maximum rate the generating unit active power output can be raised by control actions.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<ratedGrossMaxP,`ratedGrossMaxP`>>
//| [[slots_table.ratedGrossMaxP]]<<ratedGrossMaxP,`ratedGrossMaxP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The unit's gross rated maximum capacity (book value).
The attribute shall be a positive value.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<ratedGrossMinP,`ratedGrossMinP`>>
//| [[slots_table.ratedGrossMinP]]<<ratedGrossMinP,`ratedGrossMinP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The gross rated minimum generation level which the unit can safely operate at while delivering power to the transmission...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<ratedNetMaxP,`ratedNetMaxP`>>
//| [[slots_table.ratedNetMaxP]]<<ratedNetMaxP,`ratedNetMaxP`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The net rated maximum capacity determined by subtracting the auxiliary power used to operate the internal plant machinery...+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<shortPF,`shortPF`>>
//| [[slots_table.shortPF]]<<shortPF,`shortPF`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Generating unit short term economic participation factor.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<startupCost,`startupCost`>>
//| [[slots_table.startupCost]]<<startupCost,`startupCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The initial startup cost incurred for each start of the GeneratingUnit.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<startupTime,`startupTime`>>
//| [[slots_table.startupTime]]<<startupTime,`startupTime`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time it takes to get the unit on-line, from the time that the prime mover mechanical power is applied.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<tieLinePF,`tieLinePF`>>
//| [[slots_table.tieLinePF]]<<tieLinePF,`tieLinePF`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Generating unit economic participation factor.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<totalEfficiency,`totalEfficiency`>>
//| [[slots_table.totalEfficiency]]<<totalEfficiency,`totalEfficiency`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++The efficiency of the unit in converting the fuel into electrical energy.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<variableCost,`variableCost`>>
//| [[slots_table.variableCost]]<<variableCost,`variableCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The variable cost component of production per unit of ActivePower.+++
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]

| <<AdditionalEquipmentContainer,`AdditionalEquipmentContainer`>>
//| [[slots_table.AdditionalEquipmentContainer]]<<AdditionalEquipmentContainer,`AdditionalEquipmentContainer`>>
| 0..* +
xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<ContingencyEquipment,`ContingencyEquipment`>>
//| [[slots_table.ContingencyEquipment]]<<ContingencyEquipment,`ContingencyEquipment`>>
| 0..* +
xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]
| +++The contingency equipments in which this equipment participates.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EqiupmentLimitSeriesComponent,`EqiupmentLimitSeriesComponent`>>
//| [[slots_table.EqiupmentLimitSeriesComponent]]<<EqiupmentLimitSeriesComponent,`EqiupmentLimitSeriesComponent`>>
| 0..* +
xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]
| +++Equipment limit series calculation component to which this equipment contributes.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EquipmentContainer,`EquipmentContainer`>>
//| [[slots_table.EquipmentContainer]]<<EquipmentContainer,`EquipmentContainer`>>
| 0..1 +
xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Container of this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<EquipmentUnavailabilitySchedule,`EquipmentUnavailabilitySchedule`>>
//| [[slots_table.EquipmentUnavailabilitySchedule]]<<EquipmentUnavailabilitySchedule,`EquipmentUnavailabilitySchedule`>>
| 0..* +
xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<Faults,`Faults`>>
//| [[slots_table.Faults]]<<Faults,`Faults`>>
| 0..* +
xref::class/Fault.adoc[`Fault`]
| +++All faults on this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<LimitDependencyModel,`LimitDependencyModel`>>
//| [[slots_table.LimitDependencyModel]]<<LimitDependencyModel,`LimitDependencyModel`>>
| 0..* +
xref::class/LimitDependency.adoc[`LimitDependency`]
| +++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<OperationalLimitSet,`OperationalLimitSet`>>
//| [[slots_table.OperationalLimitSet]]<<OperationalLimitSet,`OperationalLimitSet`>>
| 0..* +
xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]
| +++The operational limit sets associated with this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<OperationalRestrictions,`OperationalRestrictions`>>
//| [[slots_table.OperationalRestrictions]]<<OperationalRestrictions,`OperationalRestrictions`>>
| 0..* +
xref::class/OperationalRestriction.adoc[`OperationalRestriction`]
| +++All operational restrictions for this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<Outages,`Outages`>>
//| [[slots_table.Outages]]<<Outages,`Outages`>>
| 0..* +
xref::class/Outage.adoc[`Outage`]
| +++All outages in which this equipment is involved.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<PinEquipment,`PinEquipment`>>
//| [[slots_table.PinEquipment]]<<PinEquipment,`PinEquipment`>>
| 0..* +
xref::class/PinEquipment.adoc[`PinEquipment`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<ProtectiveActionEquipment,`ProtectiveActionEquipment`>>
//| [[slots_table.ProtectiveActionEquipment]]<<ProtectiveActionEquipment,`ProtectiveActionEquipment`>>
| 0..* +
xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]
| +++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<UsagePoints,`UsagePoints`>>
//| [[slots_table.UsagePoints]]<<UsagePoints,`UsagePoints`>>
| 0..* +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All usage points connected to the electrical grid through this equipment.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<WeatherStation,`WeatherStation`>>
//| [[slots_table.WeatherStation]]<<WeatherStation,`WeatherStation`>>
| 0..* +
xref::class/WeatherStation.adoc[`WeatherStation`]
| _n/a_
| xref::class/Equipment.adoc[`Equipment`]

| <<aggregate,`aggregate`>>
//| [[slots_table.aggregate]]<<aggregate,`aggregate`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<inService,`inService`>>
//| [[slots_table.inService]]<<inService,`inService`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<networkAnalysisEnabled,`networkAnalysisEnabled`>>
//| [[slots_table.networkAnalysisEnabled]]<<networkAnalysisEnabled,`networkAnalysisEnabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++
| xref::class/Equipment.adoc[`Equipment`]

| <<normallyInService,`normallyInService`>>
//| [[slots_table.normallyInService]]<<normallyInService,`normallyInService`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for...+++
| xref::class/Equipment.adoc[`Equipment`]

| <<AssetDatasheet,`AssetDatasheet`>>
//| [[slots_table.AssetDatasheet]]<<AssetDatasheet,`AssetDatasheet`>>
| 0..1 +
xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Clearances,`Clearances`>>
//| [[slots_table.Clearances]]<<Clearances,`Clearances`>>
| 0..* +
xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ConfigurationEvent,`ConfigurationEvent`>>
//| [[slots_table.ConfigurationEvent]]<<ConfigurationEvent,`ConfigurationEvent`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Controls,`Controls`>>
//| [[slots_table.Controls]]<<Controls,`Controls`>>
| 0..* +
xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or...+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<GenericAction,`GenericAction`>>
//| [[slots_table.GenericAction]]<<GenericAction,`GenericAction`>>
| 0..* +
xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<Measurements,`Measurements`>>
//| [[slots_table.Measurements]]<<Measurements,`Measurements`>>
| 0..* +
xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperatingShare,`OperatingShare`>>
//| [[slots_table.OperatingShare]]<<OperatingShare,`OperatingShare`>>
| 0..* +
xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<OperationalTags,`OperationalTags`>>
//| [[slots_table.OperationalTags]]<<OperationalTags,`OperationalTags`>>
| 0..* +
xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSREvents,`PSREvents`>>
//| [[slots_table.PSREvents]]<<PSREvents,`PSREvents`>>
| 0..* +
xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<PSRType,`PSRType`>>
//| [[slots_table.PSRType]]<<PSRType,`PSRType`>>
| 0..1 +
xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<ReportingGroup,`ReportingGroup`>>
//| [[slots_table.ReportingGroup]]<<ReportingGroup,`ReportingGroup`>>
| 0..* +
xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<VerificationAction,`VerificationAction`>>
//| [[slots_table.VerificationAction]]<<VerificationAction,`VerificationAction`>>
| 0..* +
xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#AdditionalEquipmentContainer]
=== `AdditionalEquipmentContainer`
+++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment container, but also grouped with this equipment container.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.AdditionalEquipmentContainer`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.AdditionalEquipmentContainer,&#10548;>>
--
////


//[discrete]
[#aggregate]
=== `aggregate`
+++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases when the dedicated classes for equivalent equipment do not have all of the attributes necessary to represent the required level of detail.  In case the flag is set to “true” the single instance of equipment represents multiple pieces of equipment that have been modelled together as an aggregate equivalent obtained by a network reduction procedure. Examples would be power transformers or synchronous machines operating in parallel modelled as a single aggregate power transformer or aggregate synchronous machine.  
The attribute is not used for EquivalentBranch, EquivalentShunt and EquivalentInjection.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.aggregate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.aggregate,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#allocSpinResP]
=== `allocSpinResP`
+++The planned unused capacity (spinning reserve) which can be used to support emergency load.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.allocSpinResP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.allocSpinResP,&#10548;>>
--
////


//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.AssetDatasheet,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#autoCntrlMarginP]
=== `autoCntrlMarginP`
+++The planned unused capacity which can be used to support automatic control overruns.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.autoCntrlMarginP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.autoCntrlMarginP,&#10548;>>
--
////


//[discrete]
[#baseP]
=== `baseP`
+++For dispatchable units, this value represents the economic active power basepoint, for units that are not dispatchable, this value represents the fixed generation value. The value shall be between the operating low and high limits.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.baseP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.baseP,&#10548;>>
--
////


//[discrete]
[#CAESPlant]
=== `CAESPlant`
+++A thermal generating unit may be a member of a compressed air energy storage plant.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.CAESPlant`
| Cardinality
| 0..1
| Type
| xref::class/CAESPlant.adoc[`CAESPlant`]


|===

////
[.text-left]
--
<<slots_table.CAESPlant,&#10548;>>
--
////


//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Clearances,&#10548;>>
--
////


//[discrete]
[#CogenerationPlant]
=== `CogenerationPlant`
+++A thermal generating unit may be a member of a cogeneration plant.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.CogenerationPlant`
| Cardinality
| 0..1
| Type
| xref::class/CogenerationPlant.adoc[`CogenerationPlant`]


|===

////
[.text-left]
--
<<slots_table.CogenerationPlant,&#10548;>>
--
////


//[discrete]
[#CombinedCyclePlant]
=== `CombinedCyclePlant`
+++A thermal generating unit may be a member of a combined cycle plant.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.CombinedCyclePlant`
| Cardinality
| 0..1
| Type
| xref::class/CombinedCyclePlant.adoc[`CombinedCyclePlant`]


|===

////
[.text-left]
--
<<slots_table.CombinedCyclePlant,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvent,&#10548;>>
--
////


//[discrete]
[#ContingencyEquipment]
=== `ContingencyEquipment`
+++The contingency equipments in which this equipment participates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ContingencyEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.ContingencyEquipment,&#10548;>>
--
////


//[discrete]
[#ControlAreaGeneratingUnit]
=== `ControlAreaGeneratingUnit`
+++ControlArea specifications for this generating unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ControlAreaGeneratingUnit`
| Cardinality
| 0..*
| Type
| xref::class/ControlAreaGeneratingUnit.adoc[`ControlAreaGeneratingUnit`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.ControlAreaGeneratingUnit,&#10548;>>
--
////


//[discrete]
[#controlDeadband]
=== `controlDeadband`
+++Unit control error deadband. When a unit's desired active power change is less than this deadband, then no control pulses will be sent to the unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlDeadband`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.controlDeadband,&#10548;>>
--
////


//[discrete]
[#controlPulseHigh]
=== `controlPulseHigh`
+++Pulse high limit which is the largest control pulse that the unit can respond to.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlPulseHigh`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.controlPulseHigh,&#10548;>>
--
////


//[discrete]
[#controlPulseLow]
=== `controlPulseLow`
+++Pulse low limit which is the smallest control pulse that the unit can respond to.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlPulseLow`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.controlPulseLow,&#10548;>>
--
////


//[discrete]
[#controlResponseRate]
=== `controlResponseRate`
+++Unit response rate which specifies the active power change for a control pulse of one second in the most responsive loading level of the unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlResponseRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.controlResponseRate,&#10548;>>
--
////


//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Controls,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#efficiency]
=== `efficiency`
+++The efficiency of the unit in converting mechanical energy, from the prime mover, into electrical energy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.efficiency`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.efficiency,&#10548;>>
--
////


//[discrete]
[#EmissionCurves]
=== `EmissionCurves`
+++A thermal generating unit may have  one or more emission curves.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.EmissionCurves`
| Cardinality
| 0..*
| Type
| xref::class/EmissionCurve.adoc[`EmissionCurve`]


|===

////
[.text-left]
--
<<slots_table.EmissionCurves,&#10548;>>
--
////


//[discrete]
[#EmmissionAccounts]
=== `EmmissionAccounts`
+++A thermal generating unit may have one or more emission allowance accounts.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.EmmissionAccounts`
| Cardinality
| 0..*
| Type
| xref::class/EmissionAccount.adoc[`EmissionAccount`]


|===

////
[.text-left]
--
<<slots_table.EmmissionAccounts,&#10548;>>
--
////


//[discrete]
[#EqiupmentLimitSeriesComponent]
=== `EqiupmentLimitSeriesComponent`
+++Equipment limit series calculation component to which this equipment contributes.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EqiupmentLimitSeriesComponent`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EqiupmentLimitSeriesComponent,&#10548;>>
--
////


//[discrete]
[#EquipmentContainer]
=== `EquipmentContainer`
+++Container of this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentContainer`
| Cardinality
| 0..1
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EquipmentContainer,&#10548;>>
--
////


//[discrete]
[#EquipmentUnavailabilitySchedule]
=== `EquipmentUnavailabilitySchedule`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentUnavailabilitySchedule`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.EquipmentUnavailabilitySchedule,&#10548;>>
--
////


//[discrete]
[#Faults]
=== `Faults`
+++All faults on this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Faults`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.Faults,&#10548;>>
--
////


//[discrete]
[#FossilFuels]
=== `FossilFuels`
+++A thermal generating unit may have one or more fossil fuels.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.FossilFuels`
| Cardinality
| 0..*
| Type
| xref::class/FossilFuel.adoc[`FossilFuel`]


|===

////
[.text-left]
--
<<slots_table.FossilFuels,&#10548;>>
--
////


//[discrete]
[#FuelAllocationSchedules]
=== `FuelAllocationSchedules`
+++A thermal generating unit may have one or more fuel allocation schedules.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.FuelAllocationSchedules`
| Cardinality
| 0..*
| Type
| xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`]


|===

////
[.text-left]
--
<<slots_table.FuelAllocationSchedules,&#10548;>>
--
////


//[discrete]
[#genControlMode]
=== `genControlMode`
+++The unit control mode.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.genControlMode`
| Cardinality
| 0..1
| Type
| xref::enumeration/GeneratorControlMode.adoc[`GeneratorControlMode`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.genControlMode,&#10548;>>
--
////


//[discrete]
[#genControlSource]
=== `genControlSource`
+++The source of controls for a generating unit.  Defines the control status of the generating unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.genControlSource`
| Cardinality
| 0..1
| Type
| xref::enumeration/GeneratorControlSource.adoc[`GeneratorControlSource`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.genControlSource,&#10548;>>
--
////


//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.GenericAction,&#10548;>>
--
////


//[discrete]
[#GenUnitOpCostCurves]
=== `GenUnitOpCostCurves`
+++A generating unit may have one or more cost curves, depending upon fuel mixture and fuel cost.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.GenUnitOpCostCurves`
| Cardinality
| 0..*
| Type
| xref::class/GenUnitOpCostCurve.adoc[`GenUnitOpCostCurve`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.GenUnitOpCostCurves,&#10548;>>
--
////


//[discrete]
[#GenUnitOpSchedule]
=== `GenUnitOpSchedule`
+++A generating unit may have an operating schedule, indicating the planned operation of the unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.GenUnitOpSchedule`
| Cardinality
| 0..1
| Type
| xref::class/GenUnitOpSchedule.adoc[`GenUnitOpSchedule`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.GenUnitOpSchedule,&#10548;>>
--
////


//[discrete]
[#governorMPL]
=== `governorMPL`
+++Governor motor position limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.governorMPL`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.governorMPL,&#10548;>>
--
////


//[discrete]
[#governorSCD]
=== `governorSCD`
+++Governor Speed Changer Droop.   This is the change in generator power output divided by the change in frequency normalized by the nominal power of the generator and the nominal frequency and expressed in percent and negated. A positive value of speed change droop provides additional generator output upon a drop in frequency.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.governorSCD`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.governorSCD,&#10548;>>
--
////


//[discrete]
[#GrossToNetActivePowerCurves]
=== `GrossToNetActivePowerCurves`
+++A generating unit may have a gross active power to net active power curve, describing the losses and auxiliary power requirements of the unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.GrossToNetActivePowerCurves`
| Cardinality
| 0..*
| Type
| xref::class/GrossToNetActivePowerCurve.adoc[`GrossToNetActivePowerCurve`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.GrossToNetActivePowerCurves,&#10548;>>
--
////


//[discrete]
[#HeatInputCurve]
=== `HeatInputCurve`
+++A thermal generating unit may have a heat input curve.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.HeatInputCurve`
| Cardinality
| 0..1
| Type
| xref::class/HeatInputCurve.adoc[`HeatInputCurve`]


|===

////
[.text-left]
--
<<slots_table.HeatInputCurve,&#10548;>>
--
////


//[discrete]
[#HeatRateCurve]
=== `HeatRateCurve`
+++A thermal generating unit may have a heat rate curve.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.HeatRateCurve`
| Cardinality
| 0..1
| Type
| xref::class/HeatRateCurve.adoc[`HeatRateCurve`]


|===

////
[.text-left]
--
<<slots_table.HeatRateCurve,&#10548;>>
--
////


//[discrete]
[#highControlLimit]
=== `highControlLimit`
+++High limit for secondary (AGC) control.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.highControlLimit`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.highControlLimit,&#10548;>>
--
////


//[discrete]
[#IncrementalHeatRateCurve]
=== `IncrementalHeatRateCurve`
+++A thermal generating unit may have an incremental heat rate curve.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.IncrementalHeatRateCurve`
| Cardinality
| 0..1
| Type
| xref::class/IncrementalHeatRateCurve.adoc[`IncrementalHeatRateCurve`]


|===

////
[.text-left]
--
<<slots_table.IncrementalHeatRateCurve,&#10548;>>
--
////


//[discrete]
[#initialP]
=== `initialP`
+++Default initial active power  which is used to store a powerflow result for the initial active power for this unit in this network configuration.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.initialP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.initialP,&#10548;>>
--
////


//[discrete]
[#inService]
=== `inService`
+++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.inService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.inService,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#LimitDependencyModel]
=== `LimitDependencyModel`
+++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.LimitDependencyModel`
| Cardinality
| 0..*
| Type
| xref::class/LimitDependency.adoc[`LimitDependency`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.LimitDependencyModel,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#longPF]
=== `longPF`
+++Generating unit long term economic participation factor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.longPF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.longPF,&#10548;>>
--
////


//[discrete]
[#lowControlLimit]
=== `lowControlLimit`
+++Low limit for secondary (AGC) control.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.lowControlLimit`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.lowControlLimit,&#10548;>>
--
////


//[discrete]
[#lowerRampRate]
=== `lowerRampRate`
+++The normal maximum rate the generating unit active power output can be lowered by control actions.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.lowerRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.lowerRampRate,&#10548;>>
--
////


//[discrete]
[#maxEconomicP]
=== `maxEconomicP`
+++Maximum high economic active power limit, that should not exceed the maximum operating active power limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.maxEconomicP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.maxEconomicP,&#10548;>>
--
////


//[discrete]
[#maximumAllowableSpinningReserve]
=== `maximumAllowableSpinningReserve`
+++Maximum allowable spinning reserve. Spinning reserve will never be considered greater than this value regardless of the current operating point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.maximumAllowableSpinningReserve`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.maximumAllowableSpinningReserve,&#10548;>>
--
////


//[discrete]
[#maxOperatingP]
=== `maxOperatingP`
+++This is the maximum operating active power limit the dispatcher can enter for this unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.maxOperatingP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.maxOperatingP,&#10548;>>
--
////


//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.Measurements,&#10548;>>
--
////


//[discrete]
[#minEconomicP]
=== `minEconomicP`
+++Low economic active power limit that shall be greater than or equal to the minimum operating active power limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.minEconomicP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.minEconomicP,&#10548;>>
--
////


//[discrete]
[#minimumOffTime]
=== `minimumOffTime`
+++Minimum time interval between unit shutdown and startup.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.minimumOffTime`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.minimumOffTime,&#10548;>>
--
////


//[discrete]
[#minOperatingP]
=== `minOperatingP`
+++This is the minimum operating active power limit the dispatcher can enter for this unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.minOperatingP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.minOperatingP,&#10548;>>
--
////


//[discrete]
[#modelDetail]
=== `modelDetail`
+++Detail level of the generator model data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.modelDetail`
| Cardinality
| 0..1
| Type
| xref::class/Classification.adoc[`Classification`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.modelDetail,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#networkAnalysisEnabled]
=== `networkAnalysisEnabled`
+++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.networkAnalysisEnabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.networkAnalysisEnabled,&#10548;>>
--
////


//[discrete]
[#nominalP]
=== `nominalP`
+++The nominal power of the generating unit.  Used to give precise meaning to percentage based attributes such as the governor speed change droop (governorSCD attribute).
The attribute shall be a positive value equal to or less than RotatingMachine.ratedS.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.nominalP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.nominalP,&#10548;>>
--
////


//[discrete]
[#normallyInService]
=== `normallyInService`
+++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.normallyInService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.normallyInService,&#10548;>>
--
////


//[discrete]
[#normalPF]
=== `normalPF`
+++Generating unit economic participation factor.  The sum of the participation factors across generating units does not have to sum to one.  It is used for representing distributed slack participation factor. The attribute shall be a positive value or zero.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.normalPF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.normalPF,&#10548;>>
--
////


//[discrete]
[#oMCost]
=== `oMCost`
+++Operating and maintenance cost for the thermal unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.oMCost`
| Cardinality
| 0..1
| Type
| xref::class/CostPerHeatUnit.adoc[`CostPerHeatUnit`]


|===

////
[.text-left]
--
<<slots_table.oMCost,&#10548;>>
--
////


//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperatingShare,&#10548;>>
--
////


//[discrete]
[#OperationalLimitSet]
=== `OperationalLimitSet`
+++The operational limit sets associated with this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalLimitSet`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.OperationalLimitSet,&#10548;>>
--
////


//[discrete]
[#OperationalRestrictions]
=== `OperationalRestrictions`
+++All operational restrictions for this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalRestrictions`
| Cardinality
| 0..*
| Type
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.OperationalRestrictions,&#10548;>>
--
////


//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.OperationalTags,&#10548;>>
--
////


//[discrete]
[#Outages]
=== `Outages`
+++All outages in which this equipment is involved.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Outages`
| Cardinality
| 0..*
| Type
| xref::class/Outage.adoc[`Outage`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.Outages,&#10548;>>
--
////


//[discrete]
[#penaltyFactor]
=== `penaltyFactor`
+++Defined as: 1 / ( 1 - Incremental Transmission Loss); with the Incremental Transmission Loss expressed as a plus or minus value. The typical range of penalty factors is (0.9 to 1.1).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.penaltyFactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.penaltyFactor,&#10548;>>
--
////


//[discrete]
[#PinEquipment]
=== `PinEquipment`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.PinEquipment`
| Cardinality
| 0..*
| Type
| xref::class/PinEquipment.adoc[`PinEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.PinEquipment,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionEquipment]
=== `ProtectiveActionEquipment`
+++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done by protection equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ProtectiveActionEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionEquipment,&#10548;>>
--
////


//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSREvents,&#10548;>>
--
////


//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.PSRType,&#10548;>>
--
////


//[discrete]
[#raiseRampRate]
=== `raiseRampRate`
+++The normal maximum rate the generating unit active power output can be raised by control actions.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.raiseRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.raiseRampRate,&#10548;>>
--
////


//[discrete]
[#ratedGrossMaxP]
=== `ratedGrossMaxP`
+++The unit's gross rated maximum capacity (book value).
The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ratedGrossMaxP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.ratedGrossMaxP,&#10548;>>
--
////


//[discrete]
[#ratedGrossMinP]
=== `ratedGrossMinP`
+++The gross rated minimum generation level which the unit can safely operate at while delivering power to the transmission grid.
The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ratedGrossMinP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.ratedGrossMinP,&#10548;>>
--
////


//[discrete]
[#ratedNetMaxP]
=== `ratedNetMaxP`
+++The net rated maximum capacity determined by subtracting the auxiliary power used to operate the internal plant machinery from the rated gross maximum capacity.
The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ratedNetMaxP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.ratedNetMaxP,&#10548;>>
--
////


//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.ReportingGroup,&#10548;>>
--
////


//[discrete]
[#RotatingMachine]
=== `RotatingMachine`
+++A synchronous machine may operate as a generator and as such becomes a member of a generating unit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.RotatingMachine`
| Cardinality
| 0..*
| Type
| xref::class/RotatingMachine.adoc[`RotatingMachine`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.RotatingMachine,&#10548;>>
--
////


//[discrete]
[#shortPF]
=== `shortPF`
+++Generating unit short term economic participation factor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.shortPF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.shortPF,&#10548;>>
--
////


//[discrete]
[#ShutdownCurve]
=== `ShutdownCurve`
+++A thermal generating unit may have a shutdown curve.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.ShutdownCurve`
| Cardinality
| 0..1
| Type
| xref::class/ShutdownCurve.adoc[`ShutdownCurve`]


|===

////
[.text-left]
--
<<slots_table.ShutdownCurve,&#10548;>>
--
////


//[discrete]
[#startupCost]
=== `startupCost`
+++The initial startup cost incurred for each start of the GeneratingUnit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.startupCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.startupCost,&#10548;>>
--
////


//[discrete]
[#StartupModel]
=== `StartupModel`
+++A thermal generating unit may have a startup model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ThermalGeneratingUnit.StartupModel`
| Cardinality
| 0..1
| Type
| xref::class/StartupModel.adoc[`StartupModel`]


|===

////
[.text-left]
--
<<slots_table.StartupModel,&#10548;>>
--
////


//[discrete]
[#startupTime]
=== `startupTime`
+++Time it takes to get the unit on-line, from the time that the prime mover mechanical power is applied.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.startupTime`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.startupTime,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tieLinePF]
=== `tieLinePF`
+++Generating unit economic participation factor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.tieLinePF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.tieLinePF,&#10548;>>
--
////


//[discrete]
[#totalEfficiency]
=== `totalEfficiency`
+++The efficiency of the unit in converting the fuel into electrical energy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.totalEfficiency`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.totalEfficiency,&#10548;>>
--
////


//[discrete]
[#UsagePoints]
=== `UsagePoints`
+++All usage points connected to the electrical grid through this equipment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.UsagePoints`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.UsagePoints,&#10548;>>
--
////


//[discrete]
[#variableCost]
=== `variableCost`
+++The variable cost component of production per unit of ActivePower.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.variableCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

////
[.text-left]
--
<<slots_table.variableCost,&#10548;>>
--
////


//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

////
[.text-left]
--
<<slots_table.VerificationAction,&#10548;>>
--
////


//[discrete]
[#WeatherStation]
=== `WeatherStation`



[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.WeatherStation`
| Cardinality
| 0..*
| Type
| xref::class/WeatherStation.adoc[`WeatherStation`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

////
[.text-left]
--
<<slots_table.WeatherStation,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CAESPlant.adoc[`CAESPlant`] | xref::class/CAESPlant.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/CogenerationPlant.adoc[`CogenerationPlant`] | xref::class/CogenerationPlant.adoc#ThermalGeneratingUnits[`ThermalGeneratingUnits`]



| xref::class/CombinedCyclePlant.adoc[`CombinedCyclePlant`] | xref::class/CombinedCyclePlant.adoc#ThermalGeneratingUnits[`ThermalGeneratingUnits`]



| xref::class/EmissionAccount.adoc[`EmissionAccount`] | xref::class/EmissionAccount.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/EmissionCurve.adoc[`EmissionCurve`] | xref::class/EmissionCurve.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/FossilFuel.adoc[`FossilFuel`] | xref::class/FossilFuel.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/FuelAllocationSchedule.adoc[`FuelAllocationSchedule`] | xref::class/FuelAllocationSchedule.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/HeatInputCurve.adoc[`HeatInputCurve`] | xref::class/HeatInputCurve.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/HeatRateCurve.adoc[`HeatRateCurve`] | xref::class/HeatRateCurve.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/IncrementalHeatRateCurve.adoc[`IncrementalHeatRateCurve`] | xref::class/IncrementalHeatRateCurve.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/ShutdownCurve.adoc[`ShutdownCurve`] | xref::class/ShutdownCurve.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]



| xref::class/StartupModel.adoc[`StartupModel`] | xref::class/StartupModel.adoc#ThermalGeneratingUnit[`ThermalGeneratingUnit`]


|===

